--- a/ft-document-panel.html
+++ b/ft-document-panel.html
@@ -43,6 +43,7 @@ This element displays a list of FileThis document resources. Above the list is a
             :host {
                 display:block;
                 @apply --layout-vertical;
+                @apply --ft-document-panel;
             }
         </style>
 
