--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -57,21 +57,11 @@ A panel that displays a list of FileThis documents
         <style>
             :host {
                 display:block;
-
-                --ft-document-panel-button:
-                {
-                    background-color: blue;
-                };
-
-                --ft-labeled-icon-button:
-                {
-                    background-color: yellow;
-                };
-
             }
         </style>
 
         <ft-element-demo
+                name="ft-document-panel"
                 style="width:100%; height:100%; ">
 
             <!-- Settings -->
