--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -62,6 +62,7 @@ A panel that displays a list of FileThis documents
 
         <ft-element-demo
                 name="ft-document-panel"
+                code="[[code]]"
                 style="width:100%; height:100%; ">
 
             <!-- Settings -->
@@ -81,7 +82,7 @@ A panel that displays a list of FileThis documents
 
             <!-- Panel -->
             <ft-document-panel
-                    slot="element"
+                    slot="instance"
                     id="panel"
                     style="width:100%; height:100%; "
                     show-title="[[showTitle]]"
@@ -92,7 +93,8 @@ A panel that displays a list of FileThis documents
                     show-upload-button="[[showUploadButton]]"
                     show-download-button="[[showDownloadButton]]"
                     show-delete-button="[[showDeleteButton]]"
-                    show-document-count="[[showDocumentCountButton]]">
+                    show-document-count="[[showDocumentCountButton]]"
+                    code="{{code}}">
             </ft-document-panel>
 
         </ft-element-demo>
@@ -157,6 +159,11 @@ A panel that displays a list of FileThis documents
                 {
                     type: Boolean,
                     value: true
+                },
+                code:
+                {
+                    type: String,
+                    value: ""
                 }
             },
 
