--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -57,13 +57,14 @@ A panel that displays a list of FileThis documents
         <style>
             :host {
                 display:block;
+                @apply --layout-vertical;
             }
         </style>
 
         <ft-element-demo
                 name="ft-document-panel"
-                code="[[code]]"
-                style="width:100%; height:100%; ">
+                class="flex"
+                code="[[code]]">
 
             <!-- Settings -->
             <ft-document-panel-config
@@ -84,7 +85,6 @@ A panel that displays a list of FileThis documents
             <ft-document-panel
                     slot="instance"
                     id="panel"
-                    style="width:100%; height:100%; "
                     show-title="[[showTitle]]"
                     title="[[title]]"
                     show-grid-button="[[showGridButton]]"
