--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -57,6 +57,7 @@ A panel that displays a list of FileThis documents
         <style>
             :host {
                 display:block;
+                overflow:hidden;
                 @apply --layout-vertical;
             }
         </style>
