--- a/ft-document-panel.html
+++ b/ft-document-panel.html
@@ -42,6 +42,7 @@ This element displays a list of FileThis document resources. Above the list is a
         <style>
             :host {
                 display:block;
+                overflow:hidden;
                 @apply --layout-vertical;
                 @apply --ft-document-panel;
             }
