--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -65,6 +65,7 @@ A panel that displays a list of FileThis documents
         <ft-element-demo
                 name="ft-document-panel"
                 class="flex"
+                show-config="true"
                 code="[[code]]">
 
             <!-- Settings -->
@@ -86,6 +87,7 @@ A panel that displays a list of FileThis documents
             <ft-document-panel
                     slot="instance"
                     id="panel"
+                    style="width:100%; height:100%; "
                     show-title="[[showTitle]]"
                     title="[[title]]"
                     show-grid-button="[[showGridButton]]"
